--- a/BlazorCleanCode/Client/Counter/Pages/Counter.razor
+++ b/BlazorCleanCode/Client/Counter/Pages/Counter.razor
@@ -7,4 +7,4 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
-<button class="btn btn-primary" @onclick="OpenExternalLink">url</button>
+<button class="btn btn-primary" @onclick="OpenExternalLink">Open External Link Via JSInterop</button>
