Updated a few things while preparing an updated version of the presentation

--- a/BlazorCleanCode/Client/Weather/Pages/Forecasts.razor
+++ b/BlazorCleanCode/Client/Weather/Pages/Forecasts.razor
@@ -33,3 +33,16 @@ else
         </tbody>
     </table>
 }
+
+
+<EditForm Model="newForecast" OnValidSubmit="SubmitForecast">
+    <FluentValidationValidator />
+    <ValidationSummary />
+    
+    <div>
+        <label for="summary"></label>
+        <InputText @bind-Value="newForecast.Summary" id="summary" />
+    </div>
+</EditForm>
+
+
